GCA-124 Migrate to Spring Boot - Update tests to use get(index) instead of getFirst() for better clarity